jsonschemadsl2ecore.trafo.opt/test/test02/invalidtests/example7.test2
{
	"name":"John",
	"surname":"Smith",
	"age":55,
	"adult":1,
	"job":{
		"role":"enngineer",
		"level":6
	}
	
}